--- a/notebooks/01_plot_unique_ips.ipynb
+++ b/notebooks/01_plot_unique_ips.ipynb
@@ -70,6 +70,118 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the necessary packages\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: display the names of the files in the raw data directory.\n",
+    "print(os.listdir(\"../data/raw/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose a data file to plot.\n",
+    "daily_ip_file = \"../data/raw/log_daily_ip_201806a.txt\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional:  display the first few lines of the daily_ip_file.\n",
+    "with open(daily_ip_file) as file:\n",
+    "    line_num = 1\n",
+    "    while line_num <= 5:\n",
+    "        print(file.readline())\n",
+    "        line_num = line_num + 1\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read a data file into a pandas dataframe, df.\n",
+    "# The columns separator is '|'.\n",
+    "# There is no header row.\n",
+    "# We only need the first two columns.\n",
+    "df = pd.read_csv(daily_ip_file, sep=\"|\", header=None, usecols=[0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: display the first few rows.  There should now be only two columns, not five.\n",
+    "print(df.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Give the dataframe's columns descriptive names.\n",
+    "df.columns = [\"date1\", \"unique_ips\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: make sure the column names changed.\n",
+    "print(df.head(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: what is are the types of the columns in df?\n",
+    "print(type(df))\n",
+    "print(type(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change from a text MM/DD/YYYY date to a Python friendly datetime YYYY-MM-DD.\n",
+    "dates_datetime = [datetime.strptime(date_text, \"%m/%d/%Y\") for date_text in df.date1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
