Improved plotting and trying to get it to read data files in Colaboratory or Binder

--- a/notebooks/01_plot_unique_ips.ipynb
+++ b/notebooks/01_plot_unique_ips.ipynb
@@ -76,9 +76,46 @@
    "outputs": [],
    "source": [
     "# Import the necessary packages\n",
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conda install -y pandas (Maybe this will fix the problem in Binder. ARGH!)\n",
     "import pandas as pd\n",
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
+    "# %matplotlib inline\n",
+    "# %matplotlib notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from datetime import datetime"
    ]
   },
@@ -88,8 +125,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Specify the location of the data files.\n",
+    "# \"../data/raw/\" does not work with Google Colaboratory and Binder.  Why???\n",
+    "# Plan B: Pull data from a url like \"https://github.com/BIOF309/group-project-marie_gallagher_final_project/tree/master/notebooks/data/raw/filename.txt\"\n",
+    "data_dir = \"./data/raw/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Optional: display the names of the files in the raw data directory.\n",
-    "print(os.listdir(\"../data/raw/\"))"
+    "print(os.listdir(data_dir))"
    ]
   },
   {
@@ -99,7 +148,7 @@
    "outputs": [],
    "source": [
     "# Choose a data file to plot.\n",
-    "daily_ip_file = \"../data/raw/log_daily_ip_201806a.txt\""
+    "daily_ip_file = data_dir + \"log_daily_ip_201806a.txt\""
    ]
   },
   {
@@ -111,7 +160,7 @@
     "# Optional:  display the first few lines of the daily_ip_file.\n",
     "with open(daily_ip_file) as file:\n",
     "    line_num = 1\n",
-    "    while line_num <= 5:\n",
+    "    while line_num <= 3:\n",
     "        print(file.readline())\n",
     "        line_num = line_num + 1\n",
     "file.close()"
@@ -123,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read a data file into a pandas dataframe, df.\n",
+    "# Read the data file into a pandas dataframe, df.\n",
     "# The columns separator is '|'.\n",
     "# There is no header row.\n",
     "# We only need the first two columns.\n",
@@ -137,7 +186,7 @@
    "outputs": [],
    "source": [
     "# Optional: display the first few rows.  There should now be only two columns, not five.\n",
-    "print(df.head(5))"
+    "print(df.head(3))"
    ]
   },
   {
@@ -147,7 +196,7 @@
    "outputs": [],
    "source": [
     "# Give the dataframe's columns descriptive names.\n",
-    "df.columns = [\"date1\", \"unique_ips\"]"
+    "df.columns = [\"dates\", \"unique_ips\"]"
    ]
   },
   {
@@ -156,8 +205,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: make sure the column names changed.\n",
-    "print(df.head(5))"
+    "# Optional: make sure the column names have changed.  Display information about the columns.\n",
+    "print(df.info())"
    ]
   },
   {
@@ -166,9 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: what is are the types of the columns in df?\n",
-    "print(type(df))\n",
-    "print(type(df))"
+    "# Optional: what is the type of the df.dates column, first row?\n",
+    "print(type(df.dates[0]))"
    ]
   },
   {
@@ -177,8 +225,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change from a text MM/DD/YYYY date to a Python friendly datetime YYYY-MM-DD.\n",
-    "dates_datetime = [datetime.strptime(date_text, \"%m/%d/%Y\") for date_text in df.date1]"
+    "# We need to convert the \"object\" data in the df.dates column to a date/time objects so they will be treated as such.\n",
+    "\n",
+    "# Thanks to Burke Squires for this function adapted from\n",
+    "# https://github.com/burkesquires/python_biologist/blob/master/05_python_data_analysis\n",
+    "\n",
+    "# Define a function to convert a string (m/d/yyyy) to a date\n",
+    "def string_to_date(date_text):\n",
+    "    '''\n",
+    "    string_to_date(a_str) converts a_str from format mm/dd/yyyy to a datetime object yyyy-mm-dd.\n",
+    "    string_to_date(\"12/25/2018\") converts string 12/25/2018 to datetime object 2018-12-25.\n",
+    "    '''\n",
+    "    return datetime.strptime(date_text, \"%m/%d/%Y\")\n",
+    "\n",
+    "# Run the string_to_date function on every date string and overwrite the df.dates column\n",
+    "df.dates = df.dates.apply(string_to_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: what is the type of the df.dates column, first row, now?\n",
+    "print(type(df.dates[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: Display information about the columns.  Now df.dates is datetime64 instead of object.\n",
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: what does the data in the df.dates column look like now?  yyyy-mm-dd instead of mm/dd/yyyy!\n",
+    "print(df.dates.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Caution:\n",
+    "# Son't set the index to 'dates'.  datetime64 is not iterable.\n",
+    "# Don't do this:  df = df.set_index('dates')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display a quick plot.\n",
+    "# The days should display on the x axis (not the df index 0, 1, 2...)\n",
+    "# The unique_ips will be used on the y axis.\n",
+    "# figsize changes the size to 12 (x) by 3 (y).\n",
+    "# title adds the title to the plot.\n",
+    "df.plot.bar(x='dates',figsize=(12,3),title=\"Unique IP addresses per day\",legend=False);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What was the median number (half above, half below) of unique IP addresses accessed in a day?\n",
+    "print(df.unique_ips.median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What was the lowest number of unique IP addresses in a day?\n",
+    "print(df.unique_ips.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What day is associated with the lowest number of unique IP addresses?\n",
+    "# The day(s) when df.unique_ips.min() == df.unique_ips\n",
+    "print(df.dates[df.unique_ips==df.unique_ips.min()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What was the highest number of unique IP addresses in a day?\n",
+    "print(df.unique_ips.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What day is associated with the highest number of IP addresses?\n",
+    "# The day(s) when df.unique_ips.max() == df.unique_ips\n",
+    "print(df.dates[df.unique_ips==df.unique_ips.max()])"
    ]
   },
   {
