Adding option to pull data from https instead of local files

--- a/notebooks/01_plot_unique_ips.ipynb
+++ b/notebooks/01_plot_unique_ips.ipynb
@@ -85,7 +85,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "# How do you import numpy in Binder?  ARGH!\n",
+    "# pip install numpy # (doesn't work)\n",
+    "import numpy as np\n",
+    "np.__version__"
    ]
   },
   {
@@ -94,7 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# conda install -y pandas (Maybe this will fix the problem in Binder. ARGH!)\n",
+    "# How do you import pandas in Binder?  ARGH!\n",
+    "# pip install pandas # (doesn't work)\n",
     "import pandas as pd\n",
     "pd.__version__"
    ]
@@ -105,8 +109,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Does this work in Binder and Colaboratory?\n",
     "import matplotlib.pyplot as plt\n",
-    "# %matplotlib inline\n",
+    "# May not need either of the following...\n",
+    "%matplotlib inline\n",
     "# %matplotlib notebook"
    ]
   },
@@ -126,8 +132,9 @@
    "outputs": [],
    "source": [
     "# Specify the location of the data files.\n",
-    "# \"../data/raw/\" does not work with Google Colaboratory and Binder.  Why???\n",
+    "# \"../data/raw/\" does not work with Google Colaboratory and Binder.  Why???  ARGH!!!\n",
     "# Plan B: Pull data from a url like \"https://github.com/BIOF309/group-project-marie_gallagher_final_project/tree/master/notebooks/data/raw/filename.txt\"\n",
+    "url_path = 'https://raw.githubusercontent.com/BIOF309/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
     "data_dir = \"./data/raw/\""
    ]
   },
@@ -137,8 +144,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Workaround for problem with Colaboratory and Binder.  (use_data_from = \"data_dir\" when working locally.)\n",
+    "use_data_from = \"url_path\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Optional: display the names of the files in the raw data directory.\n",
-    "print(os.listdir(data_dir))"
+    "if use_data_from == \"data_dir\":\n",
+    "    print(os.listdir(data_dir))"
    ]
   },
   {
@@ -148,7 +166,14 @@
    "outputs": [],
    "source": [
     "# Choose a data file to plot.\n",
-    "daily_ip_file = data_dir + \"log_daily_ip_201806a.txt\""
+    "file_name = \"log_daily_ip_201806a.txt\"\n",
+    "if use_data_from == \"data_dir\":\n",
+    "    daily_ip_file = data_dir + file_name\n",
+    "elif use_data_from == \"url_path\":\n",
+    "    daily_ip_file = url_path + file_name\n",
+    "else:\n",
+    "    print(\"use_data_from must be either data_dir or url_path.  Stop.\")\n",
+    "    exit(1)"
    ]
   },
   {
@@ -158,12 +183,13 @@
    "outputs": [],
    "source": [
     "# Optional:  display the first few lines of the daily_ip_file.\n",
-    "with open(daily_ip_file) as file:\n",
-    "    line_num = 1\n",
-    "    while line_num <= 3:\n",
-    "        print(file.readline())\n",
-    "        line_num = line_num + 1\n",
-    "file.close()"
+    "if use_data_from == \"data_dir\":\n",
+    "    with open(daily_ip_file) as file:\n",
+    "        line_num = 1\n",
+    "        while line_num <= 3:\n",
+    "            print(file.readline())\n",
+    "            line_num = line_num + 1\n",
+    "    file.close()"
    ]
   },
   {
@@ -225,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We need to convert the \"object\" data in the df.dates column to a date/time objects so they will be treated as such.\n",
+    "# We need to convert the \"object\" data in the df.dates column to date/time objects so they will be treated as such.\n",
     "\n",
     "# Thanks to Burke Squires for this function adapted from\n",
     "# https://github.com/burkesquires/python_biologist/blob/master/05_python_data_analysis\n",
@@ -279,8 +305,8 @@
    "outputs": [],
    "source": [
     "# Caution:\n",
-    "# Son't set the index to 'dates'.  datetime64 is not iterable.\n",
-    "# Don't do this:  df = df.set_index('dates')"
+    "# Don't do this:  df = df.set_index('dates')\n",
+    "# Don't set the index to 'dates'.  datetime64 is not iterable."
    ]
   },
   {
@@ -294,7 +320,7 @@
     "# The unique_ips will be used on the y axis.\n",
     "# figsize changes the size to 12 (x) by 3 (y).\n",
     "# title adds the title to the plot.\n",
-    "df.plot.bar(x='dates',figsize=(12,3),title=\"Unique IP addresses per day\",legend=False);"
+    "df.plot.bar(x='dates',figsize=(12,3),title=daily_ip_file,legend=False);"
    ]
   },
   {
