Add alternate ways to read in files

--- a/notebooks/01_plot_unique_ips.ipynb
+++ b/notebooks/01_plot_unique_ips.ipynb
@@ -85,8 +85,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How do you import numpy in Binder?  ARGH!\n",
-    "# pip install numpy # (doesn't work)\n",
+    "# import urllib.request\n",
+    "# OR\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List the version of the numpy package, just to satifsy my curiosity\n",
     "import numpy as np\n",
     "np.__version__"
    ]
@@ -97,8 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# How do you import pandas in Binder?  ARGH!\n",
-    "# pip install pandas # (doesn't work)\n",
+    "# Thanks to Martin for requirements.txt that imports pandas into Binder!\n",
     "import pandas as pd\n",
     "pd.__version__"
    ]
@@ -109,9 +118,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Does this work in Binder and Colaboratory?\n",
+    "# In case of error in Binder, check requirements.txt for missing matplotlib line.\n",
     "import matplotlib.pyplot as plt\n",
-    "# May not need either of the following...\n",
+    "# May not need either of the following.  Experiment and test...\n",
     "%matplotlib inline\n",
     "# %matplotlib notebook"
    ]
@@ -135,6 +144,7 @@
     "# \"../data/raw/\" does not work with Google Colaboratory and Binder.  Why???  ARGH!!!\n",
     "# Plan B: Pull data from a url like \"https://github.com/BIOF309/group-project-marie_gallagher_final_project/tree/master/notebooks/data/raw/filename.txt\"\n",
     "url_path = 'https://raw.githubusercontent.com/BIOF309/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
+    "url_path = 'https://raw.githubusercontent.com/MarieGallagher/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
     "data_dir = \"./data/raw/\""
    ]
   },
@@ -144,8 +154,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Workaround for problem with Colaboratory and Binder.  (use_data_from = \"data_dir\" when working locally.)\n",
-    "use_data_from = \"url_path\""
+    "# Workaround for not being able to read files if using Colaboratory or Binder.  \n",
+    "# use_data_from = \"data_dir\" when working locally.\n",
+    "# use_data_from = \"url_path\" when NOT working locally.\n",
+    "use_data_from = \"url_path\"\n",
+    "# Check for a typo in the value of use_data_from.\n",
+    "if (use_data_from != \"url_path\" and use_data_from != \"data_dir\"):\n",
+    "    raise ValueError(\"use_data_from should be either 'url_path' or 'data_dir'\")"
    ]
   },
   {
@@ -170,10 +185,7 @@
     "if use_data_from == \"data_dir\":\n",
     "    daily_ip_file = data_dir + file_name\n",
     "elif use_data_from == \"url_path\":\n",
-    "    daily_ip_file = url_path + file_name\n",
-    "else:\n",
-    "    print(\"use_data_from must be either data_dir or url_path.  Stop.\")\n",
-    "    exit(1)"
+    "    daily_ip_file = url_path + file_name"
    ]
   },
   {
@@ -183,13 +195,34 @@
    "outputs": [],
    "source": [
     "# Optional:  display the first few lines of the daily_ip_file.\n",
+    "lines_to_display = 3\n",
     "if use_data_from == \"data_dir\":\n",
     "    with open(daily_ip_file) as file:\n",
     "        line_num = 1\n",
-    "        while line_num <= 3:\n",
+    "        while line_num <= lines_to_display:\n",
     "            print(file.readline())\n",
     "            line_num = line_num + 1\n",
-    "    file.close()"
+    "    file.close()\n",
+    "elif use_data_from == \"url_pathSKIP\":\n",
+    "    # METHOD 1\n",
+    "    # Thanks to https://stackoverflow.com/questions/1393324/in-python-given-a-url-to-a-text-file-what-is-the-simplest-way-to-read-the-cont\n",
+    "    raw_data = urllib.request.urlopen(daily_ip_file)\n",
+    "    line_num = 1\n",
+    "    for line in raw_data:\n",
+    "        print(line)\n",
+    "        line_num = line_num + 1\n",
+    "        if line_num > lines_to_display:\n",
+    "            break\n",
+    "elif use_data_from == \"url_path\":\n",
+    "    # METHOD 2\n",
+    "    # Thanks to https://stackoverflow.com/questions/1393324/in-python-given-a-url-to-a-text-file-what-is-the-simplest-way-to-read-the-cont\n",
+    "    response = requests.get(daily_ip_file)\n",
+    "    raw_data = response.text\n",
+    "    raw_data_lines = raw_data.split('\\n')\n",
+    "    line_num = 1\n",
+    "    while line_num <= lines_to_display:\n",
+    "        print(raw_data_lines[line_num-1])\n",
+    "        line_num = line_num + 1"
    ]
   },
   {
@@ -373,6 +406,29 @@
     "# What day is associated with the highest number of IP addresses?\n",
     "# The day(s) when df.unique_ips.max() == df.unique_ips\n",
     "print(df.dates[df.unique_ips==df.unique_ips.max()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A simple loop in case you want to keep plotting a smaller date range.\n",
+    "answer = \"Y\"\n",
+    "while answer == \"Y\":\n",
+    "    print(\"Got here 1\")\n",
+    "    answer = input(\"Do you want to plot a subset of the data? (Y=Yes) \")\n",
+    "    if answer != \"Y\":\n",
+    "        break\n",
+    "    else:\n",
+    "        range_begin = input(\"What is the start of the range? (Default = 06/01/2018) \")\n",
+    "        range_begin = range_begin.apply(string_to_date)\n",
+    "        print(range_begin)\n",
+    "        # range_end = input(\"What is tne end of the range? (Default = 06/30/2018) \")\n",
+    "        # df_subset = df[df.dates>=range_begin and df.dates<=range_end]\n",
+    "        # print(df_subset)\n",
+    "print(\"Got here 2\")"
    ]
   },
   {
