Read input from cloud instead of local file

--- a/notebooks/01_plot_unique_ips.ipynb
+++ b/notebooks/01_plot_unique_ips.ipynb
@@ -85,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Decide later which one of these packages is preferred.  For now, go with requests.\n",
     "# import urllib.request\n",
     "# OR\n",
     "import requests"
@@ -140,12 +141,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify the location of the data files.\n",
-    "# \"../data/raw/\" does not work with Google Colaboratory and Binder.  Why???  ARGH!!!\n",
-    "# Plan B: Pull data from a url like \"https://github.com/BIOF309/group-project-marie_gallagher_final_project/tree/master/notebooks/data/raw/filename.txt\"\n",
-    "url_path = 'https://raw.githubusercontent.com/BIOF309/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
-    "url_path = 'https://raw.githubusercontent.com/MarieGallagher/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
-    "data_dir = \"./data/raw/\""
+    "# Workaround for not being able to read files if using Colaboratory or Binder.  \n",
+    "# use_data_from = \"data_dir\" when working locally.\n",
+    "# use_data_from = \"url_path\" when NOT working locally.\n",
+    "use_data_from = \"url_path\"\n",
+    "# Check for a typo in the value of use_data_from.\n",
+    "if (use_data_from != \"url_path\" and use_data_from != \"data_dir\"):\n",
+    "    raise ValueError(\"use_data_from should be either 'url_path' or 'data_dir'\")"
    ]
   },
   {
@@ -154,13 +156,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Workaround for not being able to read files if using Colaboratory or Binder.  \n",
-    "# use_data_from = \"data_dir\" when working locally.\n",
-    "# use_data_from = \"url_path\" when NOT working locally.\n",
-    "use_data_from = \"url_path\"\n",
-    "# Check for a typo in the value of use_data_from.\n",
-    "if (use_data_from != \"url_path\" and use_data_from != \"data_dir\"):\n",
-    "    raise ValueError(\"use_data_from should be either 'url_path' or 'data_dir'\")"
+    "# Specify the location of the data files.\n",
+    "# \"../data/raw/\" does not work with Google Colaboratory and Binder.  Why???  ARGH!!!\n",
+    "# Plan B: Pull data from a url like \"https://github.com/BIOF309/group-project-marie_gallagher_final_project/tree/master/notebooks/data/raw/filename.txt\"\n",
+    "# url_path = 'https://raw.githubusercontent.com/BIOF309/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
+    "url_path = 'https://raw.githubusercontent.com/MarieGallagher/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
+    "data_dir = \"./data/raw/\""
    ]
   },
   {
@@ -204,7 +205,7 @@
     "            line_num = line_num + 1\n",
     "    file.close()\n",
     "elif use_data_from == \"url_pathSKIP\":\n",
-    "    # METHOD 1\n",
+    "    # METHOD 1 uses urllib.request\n",
     "    # Thanks to https://stackoverflow.com/questions/1393324/in-python-given-a-url-to-a-text-file-what-is-the-simplest-way-to-read-the-cont\n",
     "    raw_data = urllib.request.urlopen(daily_ip_file)\n",
     "    line_num = 1\n",
@@ -214,11 +215,10 @@
     "        if line_num > lines_to_display:\n",
     "            break\n",
     "elif use_data_from == \"url_path\":\n",
-    "    # METHOD 2\n",
+    "    # METHOD 2 uses requests\n",
     "    # Thanks to https://stackoverflow.com/questions/1393324/in-python-given-a-url-to-a-text-file-what-is-the-simplest-way-to-read-the-cont\n",
     "    response = requests.get(daily_ip_file)\n",
-    "    raw_data = response.text\n",
-    "    raw_data_lines = raw_data.split('\\n')\n",
+    "    raw_data_lines = response.text.split('\\n')\n",
     "    line_num = 1\n",
     "    while line_num <= lines_to_display:\n",
     "        print(raw_data_lines[line_num-1])\n",
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: display the first few rows.  There should now be only two columns, not five.\n",
+    "# Optional: display the first few rows of df.  There should now be only two columns, not five.\n",
     "print(df.head(3))"
    ]
   },
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We need to convert the \"object\" data in the df.dates column to date/time objects so they will be treated as such.\n",
+    "# Convert the \"object\" data in the df.dates column to date/time objects so they will be treated as such.\n",
     "\n",
     "# Thanks to Burke Squires for this function adapted from\n",
     "# https://github.com/burkesquires/python_biologist/blob/master/05_python_data_analysis\n",
@@ -307,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: what is the type of the df.dates column, first row, now?\n",
+    "# Optional: what is the type of the df.dates column, first row, now?  Before it was str.\n",
     "print(type(df.dates[0]))"
    ]
   },
@@ -339,7 +339,7 @@
    "source": [
     "# Caution:\n",
     "# Don't do this:  df = df.set_index('dates')\n",
-    "# Don't set the index to 'dates'.  datetime64 is not iterable."
+    "# Don't set the index to 'dates'.  datetime64 is not iterable.  You may regret this later."
    ]
   },
   {
@@ -349,7 +349,7 @@
    "outputs": [],
    "source": [
     "# Display a quick plot.\n",
-    "# The days should display on the x axis (not the df index 0, 1, 2...)\n",
+    "# The days (not the df index 0, 1, 2...) should display on the x axis\n",
     "# The unique_ips will be used on the y axis.\n",
     "# figsize changes the size to 12 (x) by 3 (y).\n",
     "# title adds the title to the plot.\n",
@@ -406,29 +406,6 @@
     "# What day is associated with the highest number of IP addresses?\n",
     "# The day(s) when df.unique_ips.max() == df.unique_ips\n",
     "print(df.dates[df.unique_ips==df.unique_ips.max()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A simple loop in case you want to keep plotting a smaller date range.\n",
-    "answer = \"Y\"\n",
-    "while answer == \"Y\":\n",
-    "    print(\"Got here 1\")\n",
-    "    answer = input(\"Do you want to plot a subset of the data? (Y=Yes) \")\n",
-    "    if answer != \"Y\":\n",
-    "        break\n",
-    "    else:\n",
-    "        range_begin = input(\"What is the start of the range? (Default = 06/01/2018) \")\n",
-    "        range_begin = range_begin.apply(string_to_date)\n",
-    "        print(range_begin)\n",
-    "        # range_end = input(\"What is tne end of the range? (Default = 06/30/2018) \")\n",
-    "        # df_subset = df[df.dates>=range_begin and df.dates<=range_end]\n",
-    "        # print(df_subset)\n",
-    "print(\"Got here 2\")"
    ]
   },
   {
