Use the BIOF309 final project repository

--- a/notebooks/01_plot_unique_ips.ipynb
+++ b/notebooks/01_plot_unique_ips.ipynb
@@ -157,10 +157,10 @@
    "outputs": [],
    "source": [
     "# Specify the location of the data files.\n",
-    "# \"../data/raw/\" does not work with Google Colaboratory and Binder.  Why???  ARGH!!!\n",
+    "# \"../data/raw/\" does not work with Google Colaboratory and Binder.\n",
     "# Plan B: Pull data from a url like \"https://github.com/BIOF309/group-project-marie_gallagher_final_project/tree/master/notebooks/data/raw/filename.txt\"\n",
-    "# url_path = 'https://raw.githubusercontent.com/BIOF309/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
-    "url_path = 'https://raw.githubusercontent.com/MarieGallagher/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
+    "url_path = 'https://raw.githubusercontent.com/BIOF309/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
+    "# url_path = 'https://raw.githubusercontent.com/MarieGallagher/group-project-marie_gallagher_final_project/master/notebooks/data/raw/'\n",
     "data_dir = \"./data/raw/\""
    ]
   },
